PROYECTO2/kubernets/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: weather-tweets
  labels:
    name: weather-tweets
