PROYECTO2/kubernets/grpc-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-client
  namespace: tweets
spec:
  replicas: 2
  selector:
    matchLabels:
      app: grpc-client
  template:
    metadata:
      labels:
        app: grpc-client
    spec:
      containers:
      - name: grpc-client
        image: rmiguel12/grpc_client:4.0  # Actualiza con tu imagen corregida
        ports:
        - containerPort: 8081
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
