PROYECTO2/kubernets/grpc-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-client-service
  namespace: weather-tweets
spec:
  selector:
    app: grpc-client
  ports:
  - port: 8081
    targetPort: 8081
  type: ClusterIP
