PROYECTO2/kubernets/kafka-producer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: producer
  namespace: weather-tweets
spec:
  selector:
    app: kafka-producer  # <- ahora sí coincide
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
  type: ClusterIP
