PROYECTO2/kubernets/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: tweets
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
      nodePort: 31379  # debe estar entre 30000-32767
  type: NodePort
