PROYECTO2/kubernets/rust-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rust-api-service
  namespace: weather-tweets
spec:
  selector:
    app: rust-api
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
