PROYECTO2/kubernets/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-tweets-ingress
  namespace: weather-tweets
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # Opcional: añadir configuraciones específicas para NGINX
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: "34.134.186.216.nip.io"  # Será reemplazado por el script
    http:
      paths:
      - path: /input
        pathType: Prefix
        backend:
          service:
            name: rust-api-service
            port:
              number: 8080
